Fix footer BEM and footer warning spacing (#1207)
* fix footer bem

* make sure utility classes are always last

* remove some whitespace

* remove merge conflict

* fix footer warning panel icon text spacing

--- a/src/components/panel/_panel.scss
+++ b/src/components/panel/_panel.scss
@@ -75,7 +75,7 @@
 
     &--footer {
       margin-bottom: 0;
-      padding: 1rem !important;
+      padding: 1rem 0 !important;
       background-color: $color-grey-4 !important;
     }
   }
@@ -148,6 +148,10 @@
   &--warn {
     .panel__icon {
       position: absolute;
+    }
+  }
+  &--success {
+    .panel__icon {
       left: 0;
     }
   }
